# NamesDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prepare_tests.sh
include/: dArray.h  debug.h  namesDB.h  namesDBt.h
src/debug/: debug.cpp  debugexception.cpp  fun_fail_guard.cpp
src/namesDB/: add.cpp  append.cpp  clean.cpp  expand.cpp  exportDB.cpp  getDBEntry.cpp  getEntry.cpp  getName.cpp  getSet.cpp  importDB.cpp  namesDB.cpp  searchAll.cpp  searchFirst.cpp  updateIndex.cpp
src/namesDBt/: append.cpp  expand.cpp  getDBEntry.cpp  getEntry.cpp  getSet.cpp  importDB.cpp  searchAll.cpp  searchFirst.cpp  updateIndex.cpp
tests/: CMakeLists.txt
tests/include/: fails.h  random.h
tests/test_main/: CMakeLists.txt  main.cpp
tests/tests/NamesDB/: CMakeLists.txt  t_namesDB.h
tests/tests/NamesDB/src/: tAdd.cpp  tAppend.cpp  tClean.cpp  tExpand.cpp  tGetEntry.cpp  tGetName.cpp  tGetSetTitle.cpp  tImportExport.cpp  tIterator.cpp  tNamesDB.cpp  tSearchAll.cpp  tSearchFirst.cpp  tUpdateIndex.cpp
tests/tests/NamesDB_Stress/: CMakeLists.txt  t_namesDBStress.h
tests/tests/NamesDB_Stress/src/: t_s_add.cpp  t_s_searchAll.cpp  t_s_searchFirst.cpp
tests/tests/Sanity/: CMakeLists.txt
tests/tests/Sanity/src/: sanity.cpp
tests/tests/Template/: CMakeLists.txt  t_.h
tests/tests/Template/src/: t.cpp
